css/style.css
:root {
  --neutral-08: #000000;
  --neutral-07: #0F0F12;
  --neutral-06: #363636;
  --neutral-05: #5F5F5F;
  --neutral-04: #ABAAAB;
  --neutral-03: #C6C4C5;
  --neutral-02: #DEDEDE;
  --neutral-01: #F2F2F2;

  --primary-01: #F90F4A;
  --primary-02: #D40C3E;

  --secondary-01: #00D5E8;
  --secondary-02: #10AAB8;

  --tertiary-01: #CEE727;
  --tertiary-02: #A2B810;

  --quaternary-01: #FF00C8;
  --quaternary-02: #D40C88;

  --outfit: "Outfit", sans-serif;
  --zillab: "Zilla Slab", serif;
}

elipse {
  width: 458px;
  height: 458px;
  position: fixed;
  top: -450px;
  left: 50%;
  transform: translateX(-50%);
  background-color: var(--primary-01);
  border-radius: 100%;
  filter: blur(250px);
  z-index: 99;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  width: 100%;
  height: 100%;
}

html {
  font-size: 62.5%;
}

body {
  background-color: black;
  font-size: 100%;
  padding-top: 12.4rem;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Outfit", sans-serif;
  font-weight: 700;
  color: var(--neutral-01);
}

h1 {
  font-size: 7.2rem;
  font-weight: 600;
  line-height: 8.0rem;
}

h1 span {
  color: var(--primary-01);
}

h2 {
  font-size: 3.2rem;
  font-weight: 700;
  line-height: 4.0rem;
}

h3 {
  font-size: 2.4rem;
  font-weight: 700;
  line-height: 3.2rem;
}

p,
a {
  font-family: "Zilla Slab", serif;
  font-weight: 300;
  color: var(--neutral-01);
}

a {
  text-decoration: none;
}

ul,
li {
  list-style: none;
}

img {
  display: block;
  max-width: 100%;
}


#fullpage {
  /*width: 100vw;
  height: 100vh;*/
  position: relative;
  transition: 700ms;
  overflow: hidden;
}

.navbar-header {
  position: fixed;
  top: 0;
  height: 0;
  z-index: 98;
  background-color: var(--neutral-08);

}

.links-container {
  display: flex;
  justify-content: space-evenly;
  flex: 1;
}

.menu-hamburger {
  width: 32px;
  height: 32px;
  padding: 0.4rem;
  align-content: space-between;
  justify-content: space-between;
  flex-direction: column;
  display: none;
}

.menu-hamburger span {
  display: block;
  width: 100%;
  height: 3px;
  background-color: #fff;
  border-radius: 3px;
}

.section {
  /*width: 100vw;
  height: 100vh;*/

  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  padding-block: 12.8rem;
}

.container {
  max-width: 1216px;
  margin: 0 auto;
  position: relative;
  padding-inline: 2.0rem;
}

/*---------------------- NAVBAR --------------*/

.navbar-header {
  width: 100%;
  height: 125px;
  position: fixed;
  text-align: center;
}

.navbar,
.menu,
.social-media {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.navbar {
  padding-block: 4.8rem;
}

.menu {
  gap: 3.2rem;
}

.menu a {
  font-size: 2.4rem;
  color: #fff;
  display: inline-block;
}

.menu a:hover {
  color: var(--primary-01);
  transition: all .5s;
}

.social-media {
  gap: 0.8rem;
}


.social-media a {
  display: flex;
  justify-content: center;
  align-items: center;
}

.social-media a:hover svg path {
  fill: var(--primary-01);
  transition: all .5s;
}

/*------------------ INTRO -----------------*/

.introduction {
  position: relative;
  text-align: center;
}

.introduction p {
  font-family: "Outfit", sans-serif;
  font-size: 7.2rem;
  font-weight: 700;
  color: var(--neutral-01);
}

.introduction p span {
  color: var(--primary-01);
}

.primary-button-outline {
  padding: 1.6rem 2.4rem;
  border-radius: 4.8rem;
  border: 0.2rem solid var(--primary-01);
  color: var(--primary-01);
  font-family: var(--outfit);
  font-weight: 700;
  background-color: transparent;
  cursor: pointer;
  position: relative;
  top: 5.6rem;
  transition: all .5s;
  font-size: 1.6rem;
}

.primary-button-outline:hover {
  padding: 1.6rem 3.2rem;
}


/*--------------------- PROJECTS LIST ----------------*/

.projects-content {
  display: flex;
  gap: 2.4rem;
}

.projects-content li {
  width: 100%;
}

.projects-content a {
  display: flex;
  flex-direction: column;
  gap: 1.6rem;
}

.projects-content .description {
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
}

.projects-content p {
  font-size: 2.4em;
}



/*------------ FOOTER ------------*/

.footer-container {
  width: 100%;
  display: flex;
  justify-content: space-between;
  gap: 2.4rem;
}

.footer-content {
  display: flex;
  flex-direction: column;
  width: 520px;
  max-width: 100%;
  gap: 2.4rem;
}

.footer form {
  display: flex;
  flex-direction: column;
  gap: 1.6rem;
}

.input-container {
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
}

.footer label {
  font-family: var(--outfit);
  font-weight: 500;
  font-size: 1.4rem;
  line-height: 2.2rem;
  color: var(--neutral-05);
}

.footer input,
.footer textarea {
  font-family: var(--outfit);
  font-size: 1.6rem;
  font-weight: 500;
  width: 100%;
  background-color: transparent;
  border: none;
  border-bottom: 1px solid var(--neutral-05);
  padding: 0.8rem 0;
  color: var(--neutral-01);
}

.footer textarea {
  height: 12.8rem;
  resize: none;
}

.footer input:focus,
.footer textarea:focus {
  outline: none;
  border-color: var(--neutral-01);
}

.footer input:-webkit-autofill,
.footer input:-webkit-autofill:hover,
.footer input:-webkit-autofill:focus,
.footer input:-webkit-autofill:active {
  -webkit-background-clip: text;
  -webkit-text-fill-color: var(--neutral-01);
  transition: background-color 5000s ease-in-out 0s;
  box-shadow: inset 0 0 20px 20px var(--neutral-08);
}

.footer button {
  padding: 1.6rem 2.4rem;
  border: 0.2rem solid var(--neutral-01);
  color: var(--neutral-01);
  font-family: var(--outfit);
  font-weight: 700;
  background-color: transparent;
  cursor: pointer;
  transition: all .5s;
  font-size: 1.6rem;
  margin-top: 2.4rem;
}

.footer button:hover {
  border-color: var(--tertiary-01);
  color: var(--tertiary-01);
}

.footer h3 a {
  display: inline-flex;
  align-items: center;
  gap: 0.8rem;
  font-size: 1.8rem;
  font-weight: 500;
}

.footer h3 a:hover,
.footer h3 a:hover svg path {
  color: var(--tertiary-01);
  fill: var(--tertiary-01);
}

.social-media-content {
  display: flex;
  flex-direction: column;
  gap: 1.6rem;
}

.social-media-content ul {
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
}

.social-media-content ul li a {
  display: inline-flex;
  align-items: center;
  gap: 0.8rem;
  font-size: 2.0rem;
  color: var(--neutral-04);
  transition: all .5s;
}

.social-media-content ul li a:hover,
.social-media-content ul li a:hover svg path {
  color: var(--tertiary-01);
  fill: var(--tertiary-01);
  transition: all .5s;
}

.brand {
  display: flex;
  height: 7.2rem;
  justify-content: center;
  align-items: center;
  text-align: center;
  color: var(--neutral-01);
  font-size: 2.0rem;
}

.brand strong {
  color: var(--tertiary-01);
}

.nav-dot-container {
  position: fixed;
  top: 50%;
  right: 2.0rem;
  transform: translateY(-50%);
}

.nav-dot {
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 20px;
}

.nav-dot.active span {
  background: var(--primary-01);
}

.nav-dot span {
  display: block;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background: var(--neutral-06);
  transition: all 200ms ease;
  margin: auto;
}


/*------------ MOBILE ----------------*/

@media (max-width:480px) {

  body {
    padding-top: 9.6rem;
  }

  .section {
    padding-block: 9.6rem;
  }

  h1 {
    font-size: 4.0rem;
    font-weight: 600;
    line-height: 4.8rem;
  }

  h2 {
    font-size: 2.4rem;
    font-weight: 700;
    line-height: 3.2rem;
  }

  h3 {
    font-size: 1.8rem;
    font-weight: 700;
    line-height: 2.6rem;
  }

  .navbar-header {
    height: 96px;
  }

  .navbar {
    padding-block: 3.2rem;
  }

  .menu-hamburger {
    position: relative;
    display: flex;
  }

  .menu-hamburger span {
    transform: translate3d(-50%);
    transition: all 700ms;
  }

  /*----------- MENU HAMBURGER ANIMATION ----------*/

  .menu-hamburger.active span {
    position: absolute;
    left: 0;
    top: 50%;
    transform: translate3d(-50%);
    transition: all 700ms;
  }

  .menu-hamburger.active span:nth-of-type(1) {
    transform: rotate(45deg);
  }

  .menu-hamburger.active span:nth-of-type(2) {
    opacity: 0;
  }

  .menu-hamburger.active span:nth-of-type(3) {
    transform: rotate(-45deg);
  }

  .links-container {
    position: fixed;
    top: 96px;
    left: 0;
    width: 100%;
    flex-direction: column;
    justify-content: center;
    gap: 4.8rem;
    background-color: #000000;
    display: none;
    -webkit-animation: fadein 700ms;
    /* Safari, Chrome and Opera > 12.1 */
    -moz-animation: fadein 700ms;
    /* Firefox < 16 */
    -ms-animation: fadein 700ms;
    /* Internet Explorer */
    -o-animation: fadein 700ms;
    /* Opera < 12.1 */
    animation: fadein 700ms;
  }

  .links-container.active {
    height: calc(100vh - 96px);
    display: flex;
  }

  @keyframes fadein {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }

  /* Firefox < 16 */
  @-moz-keyframes fadein {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }

  /* Safari, Chrome and Opera > 12.1 */
  @-webkit-keyframes fadein {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }

  /* Internet Explorer */
  @-ms-keyframes fadein {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }

  @keyframes fadein {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }

  /* Firefox < 16 */
  @-moz-keyframes fadein {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }

  /* Safari, Chrome and Opera > 12.1 */
  @-webkit-keyframes fadein {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }

  /* Internet Explorer */
  @-ms-keyframes fadein {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }

  /*----------- END OF MENU HAMBURGER ANIMATION ----------*/

  .menu {
    flex-direction: column;
  }

  .menu a {
    padding-block: 1.6rem;
  }

  .social-media {
    justify-content: center;
    align-items: center;
    gap: 1.6rem;
  }

  .second-pane {
    width: 100%;
  }

  .projects-content {
    display: grid;
    grid-auto-flow: column;
    gap: 2.4rem;

    overflow-x: auto;
    overscroll-behavior-x: contain;
    scroll-behavior: smooth;
    scroll-snap-type: x mandatory;
  }

  .projects-content li {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 300px;
    scroll-snap-align: start;
  }

  .projects-content p {
    font-size: 2.0rem;
    line-height: 2.8rem;
  }

  .nav-dot-container {
    display: none;
  }

  /*------ footer */

  .footer-container {
    flex-direction: column;
    gap: 3.2rem;
  }
}

